# real_time_recsys

./: .env.example  .gitignore  .tmp  ANALYTICS_SETUP.md  Makefile  README.md  compose.airflow.yml  compose.api.yml  compose.yml  feature_pipeline.Dockerfile  pyproject.toml  test.py
.cursor/rules/: recsys.mdc
api/: load_examples.py  logging_utils.py  main.py  pydantic_models.py  requirements.txt
cfg/: run_cfg.py
data/qdrant_storage/: raft_state.json
data_for_ai/: interim.dvc
data_for_ai/experimental/: holdout.parquet
data_for_ai/interim/: .gitignore  idm_16407u.json.dvc  test_sample_interactions_16407u.parquet.dvc  train_sample_interactions_16407u.parquet.dvc  train_sample_interactions_16407u_neg.parquet.dvc  train_sample_interactions_16407u_neg_seq.parquet.dvc  train_sample_interactions_16407u_seq.parquet  (+6 more)
mlflow/: requirements.txt
model_server/: Dockerfile  requirements.txt  sequence_service.py  service.py
notebooks/: 001-data-prep.ipynb  002-negative-sampling.ipynb  002-sequence-feature.ipynb  003-feature.ipynb  003-features.ipynb  003-negative-sampling.ipynb  003-sequence-feature.ipynb  009-popular-baseline.ipynb  010-u2u.ipynb  011-i2i.ipynb  011-item2vec.ipynb  011a-runner-i2i.ipynb  012-mf.ipynb  013-two-tower.ipynb  013a-runner-two-tower.ipynb  014-runner-sequence-modelling.py  014-sequence-modelling-bce.ipynb  014-sequence-modelling-retrieval.ipynb  014-sequence-modelling.ipynb  014a-sequence-modelling-error-analysis.ipynb  020-ann-index-retrieval.ipynb  020-ann-index.ipynb  021-batch-precompute.ipynb  021-store-batch-recs.ipynb  022-ranker.ipynb  023-sequence-modelling ranker.ipynb  023-sequence-modelling-ranker.ipynb  050-sasrec-1pos4neg.ipynb  050-sasrec.ipynb  100-appendix-add-params-mlflow.ipynb  100-appendix-bert.ipynb  100-appendix-data-prep.ipynb  100-appendix-feature-preparation.ipynb  100-appendix-feature-store.ipynb  100-appendix-optuna.ipynb  100-appendix-python-stuff.ipynb  100-appendix-re-generate-seq.ipynb  100-appendix-test-evidently.ipynb  100-appendix-weighted-loss.ipynb  100-text-search.ipynb  (+4 more)
scripts/: check_oltp_max_timestamp.py
src/algo/: cf_i2i.py  (+1 more)
ui/: README.md
(+104 files in other folders)
